[gd_scene load_steps=10 format=3 uid="uid://bfcgxtrx0scjg"]

[ext_resource type="Script" path="res://card.gd" id="1_lelgi"]
[ext_resource type="Texture2D" uid="uid://ci3oe1cxekpe1" path="res://Game Assets/MngCardBG_Cmn_00.png" id="2_vl3n0"]
[ext_resource type="Texture2D" uid="uid://6y6qsp7qrne1" path="res://minigame/card/BlasterShort00.png" id="3_knq40"]
[ext_resource type="FontFile" uid="uid://di0a4spwgh5a0" path="res://fonts/BlitzBold.otf" id="3_umn7l"]
[ext_resource type="Texture2D" uid="uid://dxe6vak4d1w80" path="res://Game Assets/GrdFreshText_01.png" id="5_nuypw"]
[ext_resource type="Texture2D" uid="uid://ba2vkc08bkxxk" path="res://Game Assets/GrdFreshText_00.png" id="5_sfp67"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0vm4g"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_24hnn"]
blend_mode = 3

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_asiap"]

[node name="card" type="Node2D"]
script = ExtResource("1_lelgi")
id = 24

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(256, 256)
texture = ExtResource("2_vl3n0")

[node name="Character" type="Sprite2D" parent="."]
position = Vector2(256, 256)
texture = ExtResource("3_knq40")

[node name="Name2" type="Label" parent="."]
light_mask = 2
visibility_layer = 2
material = SubResource("CanvasItemMaterial_0vm4g")
offset_left = 31.0
offset_top = 154.0
offset_right = 364.0
offset_bottom = 254.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_umn7l")
theme_override_font_sizes/font_size = 48
text = "Sample Text"
horizontal_alignment = 1

[node name="CommonText" type="PointLight2D" parent="."]
light_mask = 2
visibility_layer = 2
texture_repeat = 2
material = SubResource("CanvasItemMaterial_24hnn")
position = Vector2(226, 270.5)
scale = Vector2(931.111, 781.111)
color = Color(0.372549, 0.219608, 1, 1)
blend_mode = 2
range_item_cull_mask = 2
texture = SubResource("PlaceholderTexture2D_asiap")
texture_scale = 0.9

[node name="RareText" type="PointLight2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 2
texture_repeat = 2
material = SubResource("CanvasItemMaterial_24hnn")
position = Vector2(204, 212.663)
scale = Vector2(8.65741, 2.88599)
blend_mode = 2
range_item_cull_mask = 2
texture = ExtResource("5_nuypw")
texture_scale = 0.9

[node name="FreshText" type="PointLight2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 2
texture_repeat = 2
material = SubResource("CanvasItemMaterial_24hnn")
position = Vector2(199, 208)
scale = Vector2(7.77083, 1.91667)
blend_mode = 2
range_item_cull_mask = 2
texture = ExtResource("5_sfp67")
texture_scale = 0.9

[node name="Name" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.372549, 0.219608, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_umn7l")
theme_override_font_sizes/font_size = 48
text = "Luna Blaster"
horizontal_alignment = 1
